syntax = "proto3";

import "google/protobuf/empty.proto";

service BattleService {
  // Notify the soldiers about an approaching missile.
  rpc MissileApproaching(MissileNotification) returns (google.protobuf.Empty);

  // Query the status of a specific soldier.
  rpc Status(StatusRequest) returns (StatusResponse);

  // Query the status of all soldiers.
  rpc StatusAll(google.protobuf.Empty) returns (StatusAllResponse);

  // Notify a soldier whether they were hit by a missile.
  rpc WasHit(WasHitRequest) returns (google.protobuf.Empty);

  // Request a soldier to take shelter (move to a safe location).
  rpc TakeShelter(TakeShelterRequest) returns (google.protobuf.Empty);
}

message MissileNotification {
  int32 position_x = 1;
  int32 position_y = 2;
  int32 time = 3;
  string type = 4;
}

message StatusRequest {
  int32 soldier_id = 1;
}

message StatusResponse {
  bool was_hit = 1;
  // Add more response fields as needed
}

message StatusAllResponse {
  // Define fields for the status of all soldiers.
  repeated SoldierStatus soldier_statuses = 1;
}

message SoldierStatus {
  int32 soldier_id = 1;
  bool was_hit = 2;
  // Add more fields to represent soldier status.
}

message WasHitRequest {
  int32 soldier_id = 1;
  bool true_flag = 2;
}

message TakeShelterRequest {
  int32 soldier_id = 1;
}

